# padre

./: .flake8  .gitignore  .travis.yml  DEVELOP.rst  Dockerfile  GETTING_STARTED.rst  LICENSE  MANIFEST.in  README.rst  build_docker.sh  docker-compose.yml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
conf/: base.yaml
conf/dev/: base.yaml  secrets.yaml
conf/prod/: secrets.yaml
padre/: ansible_utils.py  authorizers.py  bot.py  channel.py  cloud_utils.py  date_utils.py  event.py  exceptions.py  finishers.py  followers.py  git_utils.py  google_calendar.py  handler.py  handler_utils.py  ldap_utils.py  log_utils.py  maintenance_utils.py  matchers.py  message.py  mixins.py  periodic_utils.py  periodics.py  process_utils.py  progress_bar.py  schema_utils.py  slack_utils.py  template_utils.py  trigger.py  updater_utils.py  utils.py  wsgi_utils.py
padre/cmd/: bot.py  decoder.py
padre/handlers/: alias.py  artifactory.py  brain.py  changelog.py  config.py  dns.py  elastic.py  emit.py  gerrit.py  github.py  hello.py  help.py  help_me.py  jenkins.py  jira.py  ldap.py  openstack.py  restart.py  schedule.py  sensu.py  shutdown.py  spin.py  status.py  stock.py  tell_joke.py  transcribe.py  trump.py  updater.py  uptime.py  version.py  what_are_you.py
padre/senders/: slack.py
padre/tests/: common.py  test_authorizers.py  test_date_utils.py  test_log_utils.py  test_maintenance_utils.py  test_mixins.py  test_process_utils.py  test_slack_utils.py  test_utils.py
scripts/: README.rst  setup_new_db_host.sh  start.sh
templates/: ansible.cfg.j2
(+71 files in other folders)
