[metadata]
name = padre
summary = Chat Operator
description-file =
    README.rst
author = Josh Harlow
author-email = harlowja@gmail.com
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    padre

[nosetests]
cover-erase = true
verbosity = 2

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    padre = padre.cmd.bot:main
    padre-decoder = padre.cmd.decoder:main

[wheel]
universal = 1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[flake8]
ignore=H101,H404,H405
